src/components/Header/header.scss
@use '../../styles/abstracts/' as *;

header {
  position: fixed;
  width: 100%;
  z-index: 10;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2rem;
  border-bottom: 1px solid rgba($color-gray, 0.25);
  backdrop-filter: blur(6px);
  transition: all $animation;

  .header__logo {
    display: none;
    cursor: pointer;
    font-weight: 500;
    font-size: 20px;
    transition: transform $animation;

    &--mobile {
      display: initial;
    }

    &:hover {
      transform: scale(1.05);
    }
  }

  nav {
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    background: rgba($color-primary, 0.95);
    backdrop-filter: blur(3px);
    transform: translateX(100%);
    transition: transform $animation;
    padding: 6rem 1rem 2rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    border-radius: 8px 0 0 8px;
    text-align: center;
    border-left: 1px solid rgba($color-gray, 0.6);

    &.opened {
      transform: translateX(0%);
    }

    > *:not(:last-child) {
      border-bottom: 1px solid rgba($color-gray, 0.4);
    }

    .socials-nav {
      font-size: 1.2rem;
      display: flex;
    }

    .main-nav a,
    .socials-nav a,
    .aside-nav a {
      position: relative;
      color: $font-color;
      padding-inline: 1rem;
      margin-bottom: 1rem;
      display: inline-flex;
      color: rgba($font-color, 0.8);

      &::after {
        content: '';
        position: absolute;
        bottom: -8px;
        left: 50%;
        width: 0%;
        height: 1px;
        background-color: rgba($font-color, 0.8);
        transition: all $animation;
        transform: translateX(-50%);
      }

      &:hover {
        color: $font-color;

        &::after {
          width: 100%;
        }
      }
    }
  }

  .actions-nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    flex-grow: 1;
  }
}

@include media-md {
  header {
    .header__logo {
      display: initial;

      &--mobile {
        display: none;
      }
    }

    nav {
      position: static;
      height: auto;
      transform: none;
      background: none;
      border: none;
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
      padding: 0;
      width: 100%;

      > *:not(:last-child) {
        border-bottom: none;
      }

      .main-nav a,
      .socials-nav a,
      .aside-nav a {
        position: relative;
        margin-bottom: 0;
      }

      .main-nav {
        display: flex;
      }

      .socials-nav {
        display: none;
      }

      .actions-nav {
        flex-direction: row-reverse;
        gap: 1rem;
        flex-grow: 0;
      }
    }
  }
}

